--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,11 @@
 
     RewriteEngine On
 
+    # Force HTTPS redirect (except for health checks)
+    RewriteCond %{HTTPS} off
+    RewriteCond %{REQUEST_URI} !^/up
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
