--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "globals": "^15.14.0",
+        "laravel-echo": "^2.3.0",
         "laravel-vite-plugin": "^2.0",
         "leaflet": "^1.9.4",
         "leaflet-draw": "^1.0.4",
         "lucide": "^0.562.0",
         "lucide-react": "^0.562.0",
+        "pusher-js": "^8.4.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "react-dropzone": "^14.3.8",
