--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "@inertiajs/react": "^2.3.7",
         "@tailwindcss/vite": "^4.1.11",
+        "@tensorflow/tfjs": "^4.22.0",
         "@turf/turf": "^7.3.2",
         "@types/geojson": "^7946.0.16",
         "@types/leaflet-draw": "^1.0.13",
